--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1>Вася Пупкин</h1>
         <h3>Cпец на все руки</h3>
         <p>
-            <a href="mailto:xx@yy.zz"></a>
-            <a href="http://google.com/"></a>
+            <a href="mailto:xx@yy.zz">xx@yy.zz</a>
+            <a href="http://google.com/">google.com</a>
         </p>
     </div>
     <div id="main">
@@ -50,7 +50,7 @@
     </div>
     <div id="footer">
         <p>Вася Пупкин</p>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing. <a href="mailto:xx@yy.zz"></a></p>      
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing. <a href="mailto:xx@yy.zz">xx@yy.zz</a></p>      
     </div>
 </body>
 </html>
